
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_10__ TYPE_4__ ;
typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


struct TYPE_10__ {unsigned long map; int max_seq_num; } ;
struct TYPE_9__ {TYPE_2__* s3; } ;
struct TYPE_7__ {int seq_num; } ;
struct TYPE_8__ {unsigned char* read_sequence; TYPE_1__ rrec; } ;
typedef TYPE_3__ SSL ;
typedef TYPE_4__ DTLS1_BITMAP ;


 int memcpy (int ,unsigned char const*,int) ;
 int satsub64be (unsigned char const*,int ) ;

__attribute__((used)) static int dtls1_record_replay_check(SSL *s, DTLS1_BITMAP *bitmap)
 {
 int cmp;
 unsigned int shift;
 const unsigned char *seq = s->s3->read_sequence;

 cmp = satsub64be(seq,bitmap->max_seq_num);
 if (cmp > 0)
  {
  memcpy (s->s3->rrec.seq_num,seq,8);
  return 1;
  }
 shift = -cmp;
 if (shift >= sizeof(bitmap->map)*8)
  return 0;
 else if (bitmap->map & (1UL<<shift))
  return 0;

 memcpy (s->s3->rrec.seq_num,seq,8);
 return 1;
 }
